--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <nav>
             <ul>
                 <li>
-                    <a href="" title="Home">Principal</a>
+                    <a href="" title="Home">Home</a>            
                 </li>
                 <li>
                     <a href="" title="Sobre">Sobre</a>
