--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <a href=""  title="Galeria de Fotos">Galeria de Fotos</a>
                 </li>
                 <li>
-                    <a href="" title="Contato">Paulinho</a>
+                    <a href="" title="Contato">Contato</a>
                 </li>
                 <li>
                     <a href="" title="Jogar" class="btn">Jogar</a>
