--- a/contato.html
+++ b/contato.html
@@ -71,6 +71,13 @@
             
             form.addEventListener("submit", validarFormulario);
             </script>
+            script src="js/jquery-1.11.3.min.js"></script>
+            <script src="js/aos.js"></script>
+            <script>
+                function mostrarmenu() {
+                    document.querySelector(".header-nav").classList.toggle("ativo");
+                }
+            </script>
     </body>
     
     </html>
