--- a/contato.html
+++ b/contato.html
@@ -78,6 +78,9 @@
                     document.querySelector(".header-nav").classList.toggle("ativo");
                 }
             </script>
+            <button class="menu-btn" onclick="document.querySelector('nav ul').classList.toggle('ativo')">
+                ☰
+              </button>
     </body>
     
     </html>
