--- a/galeria.html
+++ b/galeria.html
@@ -74,6 +74,10 @@
         function closeModal() {
             document.getElementById("modal").style.display = "none";
         }
+        
     </script>
+    <button class="menu-btn" onclick="document.querySelector('nav ul').classList.toggle('ativo')">
+        ☰
+      </button>
 </body>
 </html>
