--- a/jogar.html
+++ b/jogar.html
@@ -6,6 +6,44 @@
     <title>Jogo - A Lenda</title>
     <link href="style.css" rel="stylesheet">
     <link rel="stylesheet" href="js/aos.css">
+    <style>
+        /* Estilo extra para garantir centralização perfeita */
+        .game-container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin: 40px auto;
+            max-width: 960px;
+            width: 100%;
+            aspect-ratio: 4 / 3;
+            background-color: #000;
+            border-radius: 20px;
+            overflow: hidden;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.4);
+        }
+
+        .game-container iframe {
+            width: 100%;
+            height: 100%;
+            border: none;
+            display: block;
+            border-radius: 20px;
+        }
+
+        @media (max-width: 768px) {
+            .game-container {
+                aspect-ratio: 3 / 4;
+                padding: 0;
+            }
+        }
+
+        @media (max-width: 480px) {
+            .game-container {
+                aspect-ratio: 3 / 5;
+                padding: 0;
+            }
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -28,10 +66,10 @@
         <section id="introducao">
             <h1>Bem-vindo ao Jogo A Lenda!</h1>
             <p>Jogue e descubra a história do Cavaleiro Lendário!</p>
-            <iframe src="game/index.html" width="700" height="500" frameborder="0" allowfullscreen></iframe>
 
-                
-            </iframe>
+            <div class="game-container">
+                <iframe src="game/index.html" allowfullscreen></iframe>
+            </div>
         </section>
     </main>
 
